[tool.poetry]
name = "python-cardano"
version = "2.0.0"
description = "Python implementation of cardano shelley era"
authors = ["huangyi <yi.codeplayer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bitstruct = "^8.11"
cbor2 = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
